--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,6 @@ python:
   - "3.8"
   - "3.9"
 install:
-  - pip install pytest pytest-asyncio
+  - pip install pyyaml pytest pytest-asyncio
 script:
   - pytest
