--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ python:
   - "3.8"
   - "3.9"
 install:
-  - pip install -r requirements.txt
+  - pip install -U pip
+  - pip install -r dev-requirements.txt
 script:
   - pytest
 deploy:
