--- a/.gitignore
+++ b/.gitignore
@@ -283,3 +283,6 @@ Thumbs.db  #thumbnail cache on Windows
 
 # Custom rules (everything added below won't be overriden by 'Generate .gitignore File' if you use 'Update' option)
 main.py
+tmp
+venv*
+.vscode
