--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ python:
   - "3.7"
   - "3.8"
   - "3.9"
-  - "3.10"
+  - "3.10-dev"
 install:
   - pip install -U pip
   - pip install -r dev-requirements.txt
